--- a/section4.html
+++ b/section4.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./section4.css">
 </head>
-
 <body>
-    <h1>Asilbek</h1>
-<<<<<<< HEAD
-
-    <h1>Nurbek</h1>
-
-    <p>mirzoxid</p>
-
-=======
->>>>>>> 3464c7664241a9f92e4d2bcc157f39d7e0f31d7e
+    
 </body>
-
 </html>
