--- a/section3.html
+++ b/section3.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="./section3.css">
 </head>
 <body>
-    
+    <div class="sec3">
+
+        <div class="sec3yoz">
+      <p class="sec3p">Interior Plant Reference</p>
+      <p class="sec3p2">make your home so comfortable with refreshing plants</p>
+    </div>
+<div class="rasmsec3">
+    <div class="left">
+<img src="./img/Group 15.png" alt="">
+<img class="sec3img4" src="./img/high-angle-desk-arrangement-with-plants.png" alt="">
+    </div>
+    <div class="right">
+        <img class="sec3img" src="./img/unsplash_MBsReSZ2WNM.png" alt="">
+    </div>
+</div>
+    </div>
 </body>
 </html>
