--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         }
 
         body {
-            display: flex;
-            justify-content: center;
+           text-align: center;
+           position: absolute;
+           
         }
 
         section {
@@ -119,6 +120,7 @@
             flex-grow: 0;
         }
         body{
+            position: absolute;
     width: 2350px;
 height: 1410px;
 left: 0px;
@@ -213,6 +215,10 @@ color: #FFFFFF;
             </filter>
             </defs>
             </svg>
+
+
+
+
             
     </div>
 </body>
