--- a/section2.html
+++ b/section2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<!-- <div class="section1">
+<div class="section1">
     <nav>
         <img src="./img/Group (3).png" alt="">
         <a href="">Daunku</a>
@@ -19,7 +19,7 @@
         <a href="">Contact</a>
        
     </nav>
-</div> -->
+</div>
 
 <div class="div">
     <h7>Bring Serenity to Your Place
